@@ -1031,6 +1031,7 @@ nuttx-0.3.13 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Added mkfatfs, mkfifo, sleep, usleep and nice commands to NSH
 	* NSH will now execute commands in background
 	* sched_get_priority_max/min returned error on SCHED_RR
+	* Removed duplicate getenv() implementation in /lib
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
